# laba4

./: ArraySequence.h  CMakeLists.txt  DynamicArray.h  LinkedList.h  ListSequence.h  Menu.h  Menu2.h  Sequence.h  main.cpp
TESTS/: ArraySequence.cpp  CMakeLists.txt  DynamicArray.cpp  LinkedList.cpp  ListSequence.cpp
